--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -16,41 +16,40 @@
     "restart": "Restart",
     "read-more": "LEARN MORE",
     "boeuf-tgv": {
-      "line-1": "The TGV is currently one of the modes of transport with the least carbon impact on the planet. Per person and per kilometer, <important>trains pollute 8 times less than cars and 14 times less than airplanes.</important>",
-      "line-2": "In contrast, beef consumption has a strong environmental impact. In fact, a meal with beef is equivalent to 14 vegetarian meals!"
+      "line-1": "For long distances, the TGV emits far fewer greenhouse gases than gasoline cars or planes. Per person and per kilometer, <important>trains pollute 8 times less than cars and 14 times less than planes.</important>",
+      "line-2": "Beef consumption has a significant impact on the climate. In fact, the greenhouse gas emissions from a meal with beef are equivalent to those from 14 vegetarian meals!"
     },
     "tablette-chaussures": {
-      "line-1": "A tablet has <important>4x more impact</important> than a pair of leather shoes!",
-      "line-2": "The carbon footprint of digital devices in general is mainly due to their manufacturing, rather than their usage, which is why <important>it’s important to keep your tablet as long as possible.</important>"
+      "line-1": "The life cycle of a tablet (from production to disposal) generates <important>4 times more impacts</important> than that of a pair of leather shoes.",
+      "line-2": "It's the manufacturing stage of digital devices in general that has the heaviest carbon footprint, far more than their use. That's why <important>it's important to keep your tablet as long as possible.</important>"
     },
     "avocat-poisson": {
-      "line-1": "Today, avocados are often criticized for their significant environmental impact. However, despite being an exotic fruit, the impact of 1 kg of avocados is <important>slightly lower</important> than that of a meal with white fish.",
-      "line-2": "The point is not to say ‘it’s better to eat avocado than fish’, but rather to <important>put into perspective</important> the relative scale of climate impact to make informed decisions."
+      "line-1": "Today, the avocado is often criticized for its significant environmental impact. Avocados are not produced in France; they are grown in distant countries and require a lot of water to grow. However, the carbon footprint of 1 kg of avocado is slightly lower than that of a meal with white fish."
     },
     "refrigirateur-ordinateur": {
-      "line-1": "Household appliances also have a strong environmental impact. Like digital devices, <important>their impact mainly lies in their manufacturing.</important>"
+      "line-1": "Household appliances also have a strong impact on the climate. Like digital devices, the manufacturing stage is the most significant part of their carbon footprint."
     },
     "eau-the": {
-      "line-1": "A liter of bottled water has, on average, <important>6x more impact</important> than a liter of tea! Its carbon footprint is primarily due to the impact of the plastic packaging and its distribution to different points of sale."
+      "line-1": "Drinking a liter of bottled water has <important>6 times more impact</important> than drinking a liter of tea. Why? Because the production of the plastic bottle packaging and its distribution to various points of sale significantly increases its carbon footprint."
     },
     "friends-voiture": {
-      "line-1": "Watching all 236 episodes of Friends via streaming has <important>50 times less environmental impact</important> than a nearly 1000 km trip in a gasoline car.",
-      "line-2": "Indeed, today the transportation sector accounts for 30% of greenhouse gas emissions in France, while the digital sector only accounts for 2.5%."
+      "line-1": "Watching all 236 episodes of Friends via streaming has <important>50 times less environmental impact</important> than traveling nearly 1000 km in a gasoline car.",
+      "line-2": "Indeed, today the transportation sector accounts for 30% of greenhouse gas emissions in France, while the digital sector represents only 2.5%."
     },
     "manteau-bouilloire": {
-      "line-1": "Textiles have a significant carbon footprint on the environment, largely linked to the <important>manufacturing phase</important> and the <important>extraction of raw materials.</important> This is why it is important to take care of your clothes and make them last."
+      "line-1": "The production of our clothing has many environmental impacts: greenhouse gas emissions, soil, air, and water pollution. The problem: we buy many clothes and don’t always keep them for long. To reduce our climate impact, we should only buy what we need and make our clothes last as long as possible."
     },
     "television-pny": {
-      "line-1": "Short, medium, and long-haul flights emit a substantial amount of CO2e.",
-      "line-2": "A round trip from Paris to New York emits nearly 2 tons of CO2, which is almost <important>20% of the annual carbon footprint of a French citizen</important> today."
+      "line-1": "Short, medium, and long-haul flights emit a substantial amount of CO2.",
+      "line-2": "The annual carbon footprint of a person living in France is around 9 tons of CO2 per year, and a round trip from Paris to New York emits nearly 2 tons of CO2, <important>which is almost 20% of that footprint.</important>"
     },
     "email-smartphone": {
-      "line-1": "Multiplied by billions of sends, the impact of emails at a global scale is necessarily significant.",
-      "line-2": "However, this information can divert attention from bigger issues like <important>keeping your smartphone as long as possible.</important> Indeed, the carbon impact of manufacturing a smartphone will always be higher than its usage."
+      "line-1": "Multiplied by billions of sends, the global impact of emails is inevitably significant.",
+      "line-2": "However, this information can distract from larger issues like <important>keeping your smartphone as long as possible.</important> Indeed, the carbon impact of manufacturing a smartphone will always be higher than its usage."
     },
     "velo-mangue": {
-      "line-1": "Electric bikes are part of <important>soft mobility</important>, which have a lower impact compared to other modes of transportation on the planet.",
-      "line-2": "On the contrary, the mango is one of the fruits with the highest environmental impact in France today, largely due to its air transport."
+      "line-1": "Electric bikes are part of <important>low-impact mobility</important>, which have a lower impact on the planet compared to other forms of transportation.",
+      "line-2": "Conversely, the mango is one of the fruits with the highest environmental impact in France today, largely due to its importation by air."
     }
   },
   "clipboard": {
@@ -460,12 +459,12 @@
     "wattris": "Simulate the electrical consumption of your home",
     "ngc": "Estimate your consumption carbon footprint",
     "agir-tt": "What does telecommuting change for the planet?",
-    "agir": "Reduce your ecological footprint",
     "calendar": "Seasonal fruits and vegetables calendar",
     "livraison": "Download the guide 'E-consumer & responsible'",
     "leger": "How to work with a low impact ?",
     "ecoresponsable": "Eco-responsible at work",
-    "ico2": "Fun and educational resources on CO2 impact",
+    "ico2-transport": "Calculate the carbon impact of your journeys",
+    "ico2-fruitsetlegumes": "Discover seasonal fruits and vegetables and their impact",
     "fiches": "Download the printable quiz sheets"
   }
 }
