--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -16,33 +16,32 @@
     "restart": "Recommencer",
     "read-more": "POUR ALLER PLUS LOIN",
     "boeuf-tgv": {
-      "line-1": "Le TGV est aujourd’hui est un des modes de déplacement qui a le moins d’impact carbone sur la planète. Par personne et par kilomètre, <important>le train pollue 8 fois moins que la voiture et 14 fois moins que l’avion.</important>",
-      "line-2": "A contrario, la consommation de boeuf a un fort impact sur l’environnement. En effet, un repas avec du boeuf correspond à 14 repas végétariens !"
+      "line-1": "Pour faire de longues distances, le TGV émet beaucoup moins de gaz à effet de serre que la voiture à moteur thermique ou l’avion. Par personne et par kilomètre, <important>le train pollue 8 fois moins que la voiture et 14 fois moins que l’avion.</important>",
+      "line-2": "La consommation de bœuf a un fort impact sur le climat. En effet, les émissions de gaz à effet de serre liées à un repas avec du bœuf correspondent aux émissions de 14 repas végétariens !"
     },
     "tablette-chaussures": {
-      "line-1": "Une tablette a <important>4x plus d’impact</important> qu’une paire de chaussures en cuir !",
-      "line-2": "L’impact carbone des appareils numériques en général, réside principalement dans leur fabrication, plus que dans leur usage, c’est pourquoi <important>il est important de conserver sa tablette le plus longtemps possible.</important>"
+      "line-1": "Le cycle de vie d’une tablette (de sa fabrication à sa fin de vie) génère <important>4x plus d’impacts</important> que celui d’une paire de chaussures en cuir.",
+      "line-2": "C’est l’étape de fabrication des appareils numériques en général qui pèse le plus lourd dans leur bilan carbone, bien plus que dans leur usage. C’est pourquoi, <important>il est important de conserver sa tablette le plus longtemps possible.</important>"
     },
     "avocat-poisson": {
-      "line-1": "Aujourd’hui, l’avocat est souvent montré du doigt pour son impact environnemental important. Pourtant, bien que ce soit un fruit exotique, l’impact lié à 1 kg d’avocat est <important>légèrement inférieur</important> à celui d’un repas avec poisson blanc.",
-      "line-2": "Il ne s’agit pas de dire “il vaut mieux manger de l’avocat que du poisson”, mais simplement de <important>mettre en perspective</important> les ordres de grandeur d’impact sur le climat afin de pouvoir prendre des décisions avisées."
+      "line-1": " Aujourd’hui l’avocat est souvent montré du doigt pour son impact environnemental important. L’avocat n’est pas produit en France. Il est cultivé dans des pays lointains et demande beaucoup d’eau pour pousser. Pourtant, l’impact carbone d’1 kg d’avocat est légèrement inférieur à celui d’un repas avec poisson blanc."
     },
     "refrigirateur-ordinateur": {
-      "line-1": "Les appareils électroménagers ont aussi un fort impact sur l’environnement. Tout comme les appareils numériques, <important>leur impact réside principalement dans leur fabrication.</important>"
+      "line-1": " Les appareils électroménagers ont aussi un fort impact sur le climat. Tout comme les appareils numériques, l’étape de fabrication est celle qui pèse le plus lourd dans leur bilan carbone."
     },
     "eau-the": {
-      "line-1": "Un litre d’eau en bouteille a en moyenne <important>6x plus d’impact</important> qu’un litre de thé ! Son empreinte carbone est en majorité dû à l’impact de l’emballage plastique de la bouteille et de sa distribution dans les différents points de ventes."
+      "line-1": "Boire un litre d’eau en bouteille a <important>6x plus d’impacts</important> que boire un litre de thé. Pourquoi ? Car la fabrication de l’emballage plastique de la bouteille et de sa distribution dans les différents points de ventes viennent fortement alourdir l’empreinte carbone."
     },
     "friends-voiture": {
       "line-1": "Regarder les 236 épisodes de Friends en streaming a <important>50 fois moins d’impact sur l’environnement</important> qu’un déplacement de presque 1000 km en voiture thermique.",
       "line-2": "En effet, aujourd’hui le secteur du transport représente 30% des émission de gaz à effet de serre en France, alors que le secteur du numérique seulement 2,5%."
     },
     "manteau-bouilloire": {
-      "line-1": "Le textile a une forte empreinte carbone sur l’environnement, en grande partie liée à la <important>phase de fabrication</important> et <important>l’exploitation des matières premières.</important> C’est pourquoi il est important de prendre soin de ses vêtements et de les faire durer. "
+      "line-1": "La fabrication de nos vêtements a de nombreux impacts sur l’environnement : émissions de gaz à effet de serre, pollution des sols, de l’air et de l’eau. Le problème : nous achetons beaucoup de vêtements et nous ne les gardons pas toujours très longtemps. Alors pour réduire notre impact sur le climat, n’achetons que ce dont nous avons besoin et faisons durer le plus longtemps possible nos vêtements."
     },
     "television-pny": {
-      "line-1": "Les déplacements en avion, court moyen et long courrier, émettent une quantité très importante de CO2e.",
-      "line-2": "Un aller-retour Paris/New York émet près de 2 tonnes de CO2, soit presque <important>20% de l’empreinte carbone annuelle d’un citoyen français</important> aujourd’hui."
+      "line-1": "Les déplacements en avion, court moyen et long courrier, émettent une quantité très importante de CO2.",
+      "line-2": "L’empreinte carbone annuelle d’une personne vivant en France est environ de 9 tonnes de CO2 par an, et un aller-retour Paris/New York émet près de 2 tonnes de CO2, <important>soit presque 20% de cette empreinte.</important>"
     },
     "email-smartphone": {
       "line-1": "Multiplié par des milliards d’envois, l’impact des e-mails à l’échelle planétaire est nécessairement important.",
@@ -463,12 +462,12 @@
     "wattris": "Simuler la consommation électrique de son logement",
     "ngc": "Estimer son empreinte carbone de consommation",
     "agir-tt": "Le télétravail, ça change quoi pour la planète ?",
-    "agir": "Réduire votre empreinte écologique",
     "calendar": "Calendrier des fruits et légumes de saison",
     "livraison": "Télécharger le guide “E-consommateur & responsable”",
     "leger": "Comment télétravailler léger ?",
     "ecoresponsable": "Écoresponsable au bureau",
-    "ico2": "Les ressources ludiques et pédagogiques sur l’impact CO2",
+    "ico2-transport": "Calculer l'impact carbone de vos trajets",
+    "ico2-fruitsetlegumes": "Découvrir les fruits et légumes de saison et leur impact",
     "fiches": "Télécharger les fiches du quizz à imprimer"
   }
 }
