--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -1,4 +1,59 @@
 {
+  "quiz": {
+    "question": "Pregunta",
+    "previous": "Ant.",
+    "title": "Según tú, ¿qué tiene <important>menos</important> impacto en el clima?",
+    "tag": "Elige tu respuesta a continuación:",
+    "ou": "o",
+    "correct": "<important>¡Bien hecho!</important> ¡Eso es exactamente correcto!",
+    "missed": "<important>Fallaste...</important> La respuesta correcta era",
+    "more": "Leer más",
+    "less": "Reducir",
+    "next": "Siguiente pregunta",
+    "result": "Ver puntuación",
+    "finished": "¡Ha terminado!",
+    "score": "Has obtenido <important>{score} / 10</important> {score, plural, =1 {respuesta correcta} other {respuestas correctas}}!",
+    "restart": "Reiniciar",
+    "read-more": "APRENDE MÁS",
+    "boeuf-tgv": {
+      "line-1": "Para largas distancias, el TGV emite muchos menos gases de efecto invernadero que los coches de gasolina o los aviones. Por persona y por kilómetro, <important>los trenes contaminan 8 veces menos que los coches y 14 veces menos que los aviones.</important>",
+      "line-2": "El consumo de carne de res tiene un impacto significativo en el clima. De hecho, las emisiones de gases de efecto invernadero de una comida con carne de res son equivalentes a las de 14 comidas vegetarianas."
+    },
+    "tablette-chaussures": {
+      "line-1": "El ciclo de vida de una tableta (desde su fabricación hasta su fin de vida) genera <important>4 veces más impacto</important> que el de un par de zapatos de cuero.",
+      "line-2": "Es la etapa de fabricación de los dispositivos digitales en general la que más pesa en su huella de carbono, mucho más que su uso. Por eso, <important>es importante conservar la tableta el mayor tiempo posible.</important>"
+    },
+    "avocat-poisson": {
+      "line-1": "Hoy en día, el aguacate es a menudo criticado por su importante impacto ambiental. Los aguacates no se producen en Francia; se cultivan en países lejanos y requieren mucha agua para crecer.",
+      "line-2": "Sin embargo, la huella de carbono de 1 kg de aguacate es ligeramente inferior a la de una comida con pescado blanco."
+    },
+    "refrigirateur-ordinateur": {
+      "line-1": "Los electrodomésticos también tienen un fuerte impacto en el clima. Al igual que los dispositivos digitales, la etapa de fabricación es la parte más significativa de su huella de carbono."
+    },
+    "eau-the": {
+      "line-1": "Beber un litro de agua embotellada tiene <important>6 veces más impacto</important> que beber un litro de té. ¿Por qué? Porque la producción del embalaje de plástico de la botella y su distribución a los diferentes puntos de venta aumentan significativamente su huella de carbono."
+    },
+    "friends-voiture": {
+      "line-1": "Ver los 236 episodios de Friends en streaming tiene <important>50 veces menos impacto ambiental</important> que viajar casi 1000 km en un coche de gasolina.",
+      "line-2": "De hecho, hoy en día el sector del transporte representa el 30% de las emisiones de gases de efecto invernadero en Francia, mientras que el sector digital representa solo el 2,5%."
+    },
+    "manteau-bouilloire": {
+      "line-1": "La producción de nuestra ropa tiene muchos impactos ambientales: emisiones de gases de efecto invernadero, contaminación del suelo, aire y agua. El problema: compramos mucha ropa y no siempre la conservamos por mucho tiempo.",
+      "line-2": "Para reducir nuestro impacto en el clima, debemos comprar solo lo que necesitamos y hacer que nuestra ropa dure el mayor tiempo posible."
+    },
+    "television-pny": {
+      "line-1": "Los vuelos de corto, medio y largo recorrido emiten una cantidad considerable de CO2.",
+      "line-2": "La huella de carbono anual de una persona que vive en Francia es de alrededor de 9 toneladas de CO2 al año, y un viaje de ida y vuelta París-Nueva York emite cerca de 2 toneladas de CO2, <important>lo que representa casi el 20% de esa huella.</important>"
+    },
+    "email-smartphone": {
+      "line-1": "Aunque enviamos muchos correos electrónicos, su impacto en el clima es mucho menos significativo que las emisiones generadas por la fabricación y, en menor medida, el uso de un teléfono inteligente.",
+      "line-2": "Para reducir la huella digital, mantengamos nuestros teléfonos inteligentes el mayor tiempo posible."
+    },
+    "velo-mangue": {
+      "line-1": "Utilizar una bicicleta eléctrica para desplazarse tiene mucho menos impacto en el clima en comparación con otros modos de transporte que usan combustibles fósiles, incluso teniendo en cuenta la fabricación de la bicicleta y la batería.",
+      "line-2": "La huella de carbono de los mangos, como todas las frutas exóticas, se agrava por su transporte. El impacto de los mangos, a menudo importados por avión, es aún mayor que el de otras frutas exóticas que viajan en barco."
+    }
+  },
   "clipboard": {
     "copier": "Copiar",
     "copie": "Copiado",
@@ -280,6 +335,7 @@
     "fdv": "Fin de vida",
     "usage-fdv": "Uso y fin de vida",
     "total": "Total",
+    "yearly-usage": "por año de uso",
     "Matières premières": "Materias primas",
     "Approvisionnement": "Abastecimiento",
     "hypothesis": {
@@ -397,13 +453,13 @@
     "m²": "m²",
     "km": "km",
     "kg": "kg",
+    "an": "año",
     "repas": "comida",
     "litre": "litro",
     "épisode": "episodio",
     "intégrale": "completo",
     "param": "con los parámetros indicados a continuación",
     "email": "correo",
-    "année": "año",
     "recherche": "búsqueda"
   },
   "ressources": {
@@ -414,10 +470,13 @@
     "chauffage-bois": "Adoptar calefacción de madera",
     "wattris": "Simular el consumo eléctrico de tu hogar",
     "ngc": "Estimar tu huella de carbono de consumo",
-    "agir": "¿El teletrabajo, qué cambia para el planeta?",
+    "agir-tt": "¿El teletrabajo, qué cambia para el planeta?",
     "calendar": "Calendario de frutas y verduras de temporada",
     "livraison": "Descargar la guía “E-consumidor & responsable”",
     "leger": "¿Cómo trabajar con bajo impacto?",
-    "ecoresponsable": "Eco-responsabilidad en el trabajo"
+    "ecoresponsable": "Eco-responsabilidad en el trabajo",
+    "ico2-transport": "Calcule el impacto de carbono de sus viajes",
+    "ico2-fruitsetlegumes": "Descubre frutas y verduras de temporada y su impacto",
+    "fiches": "Descargue las hojas del cuestionario para imprimir"
   }
 }
